--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --no-warnings server.js",
     "start": "node server.js"
   },
   "keywords": [],
