--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "expenser",
     "version": "1.0.0",
     "scripts": {
-        "start-backend": "npm run dev --prefix ./Backend",
-        "start-frontend": "npm start --prefix ./Frontend",
-        "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
+      "install-all": "npm install --prefix ./Backend && npm install --prefix ./Frontend",
+      "start-backend": "npm run dev --prefix ./Backend",
+      "start-frontend": "npm start --prefix ./Frontend",
+      "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
     },
     "devDependencies": {
-        "concurrently": "^8.2.2"
+      "concurrently": "^8.0.0"
     }
-}
+  }
+  
